load(
  "@rules_rust//rust:defs.bzl",
  "rust_doc",
  "rust_library",
  "rust_static_library",
  "rust_test"
)

package(default_visibility = ["//visibility:public"])

# Must match package.version in Cargo.toml.
VERSION = "0.1.0"

# See features section of Cargo.toml.
FEATURES = []

SRCS = [
  "atom.rs",
  "cell.rs",
  "convert.rs",
  "lib.rs",
  "noun.rs",
  "serdes.rs",
]

# Rust noun library (i.e. libnoun.rlib).
rust_library(
  name = "noun_rust_lib",
  crate_name = "noun",
  version = VERSION,
  crate_features = FEATURES,
  srcs = SRCS,
)

# Static noun library (i.e. libnoun.a).
rust_static_library(
  name = "noun_static_lib",
  version = VERSION,
  crate_features = FEATURES,
  srcs = SRCS,
)

# Unit tests.
rust_test(
  name = "noun_test",
  crate = ":noun_rust_lib",
)

# Documentation.
rust_doc(
  name = "noun_doc",
  crate = ":noun_rust_lib",
)
